--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
       "eslint:recommended"
     ],
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "babel-eslint",
+      "ecmaVersion": "latest"
     },
     "rules": {}
   },
