--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "nodemon app.js"
   },
   "dependencies": {
+    "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "firebase": "^9.1.3",
+    "socket.io": "^4.4.0",
+    "socket.io-client": "^4.4.0",
     "vue": "^2.6.11",
     "vue-cli-plugin-webpack-bundle-analyzer": "^4.0.0",
     "vue-router": "^3.2.0",
@@ -28,6 +34,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
+    "nodemon": "^2.0.15",
     "prettier": "^2.2.1",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
