--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
       "node": false
     },
     "extends": [
-      "plugin:vue/essential",
+      "plugin:vue/recommended",
       "eslint:recommended"
     ],
     "parserOptions": {
