--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
   "name": "aneki",
-  "version": "0.1.0",
+  "version": "1.1.5",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
+    "express": "^4.17.3",
     "firebase": "^9.1.3",
-    "socket.io": "^4.4.0",
-    "socket.io-client": "^4.4.0",
     "vue": "^2.6.11",
-    "vue-cli-plugin-webpack-bundle-analyzer": "^4.0.0",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
@@ -34,12 +31,12 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
-    "nodemon": "^2.0.15",
     "prettier": "^2.2.1",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-compression": "~1.1.5",
     "vue-cli-plugin-vuetify": "~2.4.3",
+    "vue-cli-plugin-webpack-bundle-analyzer": "^4.0.0",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.7.0",
     "webpack-bundle-analyzer": "^4.5.0"
